add: input manager with singleton plus some example for jump made

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,11 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 find_package(SDL2 REQUIRED)
-include_directories(${SDL2_INCLUDE_DIRS})
 
-add_executable(BasketoGameEngine src/main.cpp src/Game.cpp)
-target_link_libraries(BasketoGameEngine ${SDL2_LIBRARIES})
+# Manually specify SDL2_image paths
+include_directories(${SDL2_INCLUDE_DIRS} /usr/include/SDL2)
+set(SDL2_IMAGE_LIBRARIES -lSDL2_image)
+
+add_executable(BasketoGameEngine src/main.cpp src/Game.cpp utils/utility.cpp src/InputManager.cpp)
+
+target_link_libraries(BasketoGameEngine ${SDL2_LIBRARIES} ${SDL2_IMAGE_LIBRARIES})
