--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "vendor/sol2"]
 	path = vendor/sol2
 	url = https://github.com/ThePhD/sol2.git
+[submodule "vendor/libtinyfiledialogs"]
+	path = vendor/libtinyfiledialogs
+	url = https://github.com/native-toolkit/libtinyfiledialogs.git
