Basic unit tests for game and input components, Asset validation tool, Memory leak detection system, Proper CMake configuration for testing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,30 @@
 cmake_minimum_required(VERSION 3.10)
 project(BasketoGameEngine)
 
+# Use vcpkg
+set(CMAKE_TOOLCHAIN_FILE ${CMAKE_CURRENT_SOURCE_DIR}/vcpkg/scripts/buildsystems/vcpkg.cmake)
+
+# Download and unpack googletest at configure time
+configure_file("${CMAKE_CURRENT_SOURCE_DIR}/vendor/googletest/CMakeLists.txt"
+              "${CMAKE_BINARY_DIR}/googletest-download/CMakeLists.txt")
+execute_process(COMMAND ${CMAKE_COMMAND} -G "${CMAKE_GENERATOR}" .
+                RESULT_VARIABLE result
+                WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/googletest-download )
+if(result)
+    message(FATAL_ERROR "CMake step for googletest failed: ${result}")
+endif()
+execute_process(COMMAND ${CMAKE_COMMAND} --build .
+                RESULT_VARIABLE result
+                WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/googletest-download )
+if(result)
+    message(FATAL_ERROR "Build step for googletest failed: ${result}")
+endif()
+
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
+
+# Add vcpkg's include directories to the include path
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/vcpkg/installed/x64-windows/include)
 
 find_package(SDL2 REQUIRED)
 
@@ -16,6 +38,9 @@ find_package(Lua 5.4 REQUIRED)
 
 # Add Sol2 subdirectory
 add_subdirectory(vendor/sol2)
+
+add_subdirectory(src)
+add_subdirectory(tests)
 
 pkg_check_modules(SDL2_IMAGE REQUIRED SDL2_image)
 include_directories(${SDL2_IMAGE_INCLUDE_DIRS})
