feat: Add comprehensive Event System and State Machine framework for advanced game logic
- Implement complete ECS-based Event System with EventComponent for entity communication
- Add EventSystem for high-performance event processing, queuing, and dispatch
- Support multiple event types: collision, input, custom events, state transitions
- Create comprehensive State Machine framework with StateMachineComponent
- Add StateMachineSystem for finite state machine processing and transitions
- Support multiple transition conditions: events, timers, parameters, scripts
- Include 4 built-in state machine templates: Player Controller, Enemy AI, UI States, Game Flow
- Integrate with animation and audio systems for state-driven behavior
- Add complete Lua scripting support with 8 new event/state machine functions
- Include visual editor integration in Inspector Panel for real-time editing
- Add JSON serialization for scene persistence and state machine configuration
- Create comprehensive demo script showcasing event-driven state transitions
- Optimize with frame-based event processing and performance metrics
- Full integration with existing ECS architecture and particle system

This Event System and State Machine framework transforms Basketo into an enterprise-grade
game engine capable of complex AI behaviors, interactive UI systems, and sophisticated
game logic management for professional game development.

Co-authored-by: Baslael baslaworku@gmail.com

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -78,6 +78,8 @@ target_sources(BasketoGameEngine PRIVATE
     src/ecs/systems/AnimationSystem.cpp
     src/ecs/systems/PhysicsSystem.cpp
     src/ecs/systems/ParticleSystem.cpp
+    src/ecs/systems/EventSystem.cpp
+    src/ecs/systems/StateMachineSystem.cpp
 
     # ECS Components
     src/ecs/components/ParticleComponent.cpp
